# lanius

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  programming_norm.md
examples/: operation.lan
include/: ast.h  bool.h  lexer.h  parser.h  str.h  token.h  utils.h  vector.h
src/: CMakeLists.txt  lexer.c  main.c  repl.c  str.c  token.c
src/exec/: repl.c
src/lexer/: lexer.c  token.c
src/parser/: ast.c  parser.c
src/str/: str.c
test/: variable.lan
